[package]
name = "pixelast"
version = "0.1.0"
authors = ["Shuhei Yamashita <b.e7472@gmail.com>"]
repository = "https://github.com/yamash723/pixelast"
keywords = ["pixela"]
license-file = "LICENSE"
readme = "README.md"
description = "A simple Pixela client."

[dependencies]
regex = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.9.2"
failure = "0.1.2"